# wasm-inspector

./: .gitignore  Cargo.toml  readme.md
docs/: index.html
docs/pkg/: README.md  package.json  wasm_inspector.js
src/: analyzer.rs  graph.rs  lib.rs  main.rs  memory.rs  parser.rs  security.rs  types.rs
tests/: 1_test.rs  integration_test.rs  practical_test.rs
web/: script.js  style.css
web/pkg/: wasm_inspector.d.ts  wasm_inspector_bg.wasm  wasm_inspector_bg.wasm.d.ts
